# cirrus

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.in  README.md  bootstrap.sh  config.status  configure  configure.ac  testing_travis.sh
.travis/: check-git-clang-format-output.sh
autom4te.cache/: output.0  traces.0  traces.1
configs/: criteo_kaggle-random.cfg  criteo_kaggle.cfg  criteo_kaggle_newpreprocessing.cfg  criteo_kaggle_noprefetch.cfg  criteo_kaggle_sdca.cfg  jester.cfg  lda.cfg  lda_large.cfg  lda_test.cfg  netflix.cfg  softmax_config.cfg
docker/: build-docker.sh
docker/base-deps/: Dockerfile
jenkins_tests/: test.sh  test_all.sh  test_jester.sh  test_mf.sh
python/cirrus/: setup.py
python/cirrus/cirrus/: __init__.py
python/cirrus/cirrus.egg-info/: PKG-INFO
python/frontend/: LICENSE  README.md  cirrus.py  setup.py
python/frontend/cirrus/: __init__.py  requirements.txt
python/frontend/cirrus/cirrus/: .GridSearch.py.swp  .core.py.swp  .cross_validation.py.swp  ConfigGenerator.py  CostModel.py  CrossValidation.py  GridSearch.py  MLJob.py  __init__.py  automate.py  cf.py  constants.py  core.py  cross_validation.py  cv_utils.py  ec2_vm.py  graph.py  graphCV.py  lda.py  lr.py  messenger.py  parameter_server.py  setup.py  sm.py  test.py  utils.py
python/frontend/cirrus/examples/: SoftmaxDemo.ipynb  UIExample.py  UIExample_cv.py  UIExample_softmax.py  build.ipynb  check_accuracy.py  cross_validation.ipynb  cross_validation.py  hyperparameter_optimization.ipynb  logistic_regression.ipynb  machine_0.sh  machine_1.sh  publish.ipynb  softmax.ipynb  test.py
scripts/: check_clang_format.sh
src/: .Makefile_ubuntu.am.swp  AdaGrad.cpp  AdaGrad.h  BaseInterface.h  Checksum.cpp  Checksum.h  CircularBuffer.h  Configuration.cpp  Configuration.h  Constants.h  CriteoCsvToLibSVM.cpp  Dataset.cpp  Dataset.h  DatasetConversion.cpp  DatasetConversion.h  Decls.h  ErrorSparseTask.cpp  ErrorTaskSoftmax.cpp  InputReader.cpp  InputReader.h  LDADataset.cpp  LDADataset.h  LDAModel.cpp  LDAModel.h  LDAStatistics.cpp  LDAStatistics.h  LDATaskS3.cpp  LRModel.cpp  LRModel.h  LoadingLDATaskS3.cpp  LoadingNetflixTask.cpp  LoadingSparseTaskS3.cpp  LogisticSparseSDCATaskS3.cpp  LogisticSparseTaskEFS.cpp  LogisticSparseTaskS3.cpp  MFModel.cpp  MFModel.h  MFNetflixTask.cpp  Makefile  Makefile.am  (+90 more)
src/.deps/: Checksum.Po  Configuration.Po  CriteoCsvToLibSVM.Po  Dataset.Po  ErrorSparseTask.Po  InputReader.Po  LRModel.Po  LoadingNetflixTask.Po  LoadingSparseTaskS3.Po  LogisticSparseTaskS3.Po  MFModel.Po  MFNetflixTask.Po  Matrix.Po  MlUtils.Po  Model.Po  ModelGradient.Po  MurmurHash3.Po  PSSparseServerInterface.Po  PSSparseServerTask.Po  PSSparseServerTaskTest.Po  PerformanceLambdaTask.Po  S3.Po  S3Iterator.Po  S3SparseIterator.Po  SoftmaxModel.Po  SparseDataset.Po  SparseLRModel.Po  SparseMFModel.Po  TasksWait.Po  Utils.Po  parameter_server.Po
src/common/: Makefile.am
src/common/schemas/: Makefile.am  PSMessage.fbs  WorkerMessage.fbs
src/messages/: AddTensorMessage.cpp  AddTensorMessage.h  AddTensorMessageReply.cpp  AddTensorMessageReply.h  CreateTensorMessage.cpp  CreateTensorMessage.h  CreateTensorMessageReply.cpp  CreateTensorMessageReply.h  GetSparseTensorMessage.cpp  GetSparseTensorMessage.h  GetSparseTensorMessageReply.cpp  GetSparseTensorMessageReply.h  GetTensorMessage.cpp  GetTensorMessage.h  GetTensorMessageReply.cpp  GetTensorMessageReply.h
src/test_data/: .train_mnist.csv.swp
tests/: Makefile.am
tests/iterator/: Makefile.am
tests/test_data/: jester.sh  jester_test.csv  nytimes.sh  nytimes_vocab.txt
tests/test_logistic_regression/: Makefile  lr_criteo.py  lr_criteo_sparse.py  lr_criteo_tf.py
tests/test_s3/: Makefile.am
tests/test_travis/: Makefile.am  Makefile_ubuntu.am  check_ll_cirrus_lda.cpp  error.cpp  ps_test.cpp  test.sh  worker.cpp
tests/test_travis/mnist_test/: error_sm.cpp  sm_test.cpp  sm_worker.cpp  test.sh  worker_sm.cpp
tests/test_travis/mnist_test/.deps/: sm_error.Po  sm_test.Po  sm_worker.Po
tests/test_travis_lda/: Makefile.am  load.cpp  ps_test.cpp  test.sh  w1.cpp  w2.cpp  worker.cpp
tests/test_travis_lr/: Makefile.am  error.cpp  ps_test.cpp  test.py  test.sh  worker.cpp
tests/test_travis_lr_multiplePS/: Makefile.am  check_correctness_cirrus_sgd.cpp  error.cpp  ps_test2.cpp  test.sh
tests/test_travis_lr_multiple_PS/: Makefile.am  error.cpp  ps_test.cpp  test.py  test.sh  worker.cpp
tests/test_travis_lr_sdca/: Makefile.am  check_correctness_cirrus_sdca.cpp  check_correctness_cirrus_sgd.cpp  error.cpp  ps_test.cpp  test.py  test.sh  worker.cpp
tests/test_travis_mf/: Makefile.am  error_mf.cpp  ps_test_mf.cpp  test.py  worker_mf.cpp
tests/test_travis_mf_multiplePS/: Makefile.am  ps_test_mf2.cpp  test.sh  worker_mf.cpp
tests/test_travis_mf_multiple_PS/: Makefile.am  error_mf.cpp  ps_test_mf.cpp  test.py  test.sh  worker_mf.cpp
tests/test_travis_multiplePS/: worker.cpp
tests/test_travis_sm/: test.py
